# agentic-resume

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_agent_run_tables.py  0002_create_agent_run_jobs.py
app/: agent_jobs.py  agent_runtime.py  api.py  claim_checker.py  evidence_matcher.py  job_analysis.py  llm_backend.py  models.py  parsers.py  persistence.py  resume_input.py  rewrite_generator.py  tailoring.py  tailoring_agent.py  validator.py  worker.py
data/: sample_jd.txt  sample_resume.txt
docs/: v0-spec.md  v1-spec.md  v10-spec.md  v11-spec.md  v12-spec.md  v13-spec.md  v14-spec.md  v15-spec.md  v16-spec.md  v17-spec.md  v18-spec.md  v19-spec.md  v2-spec.md  v20-spec.md  v21-spec.md  v3-spec.md  v4-spec.md  v5-spec.md  v6-spec.md  v7-spec.md  v8-spec.md  v9-spec.md
examples/: curl_tailor.sh  tailor_request.json
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: agent-run-workspace.tsx  globals.css  layout.tsx  page.tsx  query-provider.tsx
tests/: test_agent_jobs.py  test_agent_run_api.py  test_agent_runtime.py  test_agentic_api.py  test_api.py  test_claim_checker.py  test_docker_runtime.py  test_evidence_matcher.py  test_examples.py  test_job_analysis.py  test_llm_backend.py  test_models.py  test_parsers.py  test_persistence.py  test_resume_input.py  test_rewrite_generator.py  test_tailoring.py  test_tailoring_agent.py  test_v0_flow.py  test_v1_flow.py  test_v2_flow.py  test_v3_flow.py  test_v4_flow.py  test_v8_flow.py  test_validators.py  test_worker.py
(+8 files in other folders)
